Alignment fix.

--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -385,7 +385,7 @@ input.car-details:-ms-input-placeholder {
   overflow: hidden;
 }
 .news img {
-  height: 150px;
+  height: 107px;
   width: 50%;
   -o-object-fit: contain;
      object-fit: contain;
@@ -402,7 +402,7 @@ input.car-details:-ms-input-placeholder {
   margin: 0 5px;
 }
 .about-and-follow .about-text {
-  color: #c5c1c1;
+  color: #8d8888;
   font-size: 14px;
 }
 
@@ -449,6 +449,12 @@ input.car-details:-ms-input-placeholder {
   border-radius: 50%;
   background-color: #212529;
 }
+.review .review-button {
+  margin-top: 24px;
+}
+.review .read-more-button {
+  max-width: 186px;
+}
 
 @media screen and (max-width: 1200px) {
   .find-card {
@@ -461,20 +467,20 @@ input.car-details:-ms-input-placeholder {
     margin-top: 10px;
   }
 }
-.feature-brand, .feature-brand-mobile {
+.feature-brand {
   padding: 10px;
 }
-.feature-brand .hr-line, .feature-brand-mobile .hr-line {
+.feature-brand .hr-line {
   border-bottom: 1px solid #dedfe1;
   width: 43%;
 }
-.feature-brand .feature-heading, .feature-brand-mobile .feature-heading {
+.feature-brand .feature-heading {
   font-size: 28px;
   font-weight: bold;
   white-space: nowrap;
   margin: 0 5px;
 }
-.feature-brand .hexagon, .feature-brand-mobile .hexagon {
+.feature-brand .hexagon {
   width: 100px;
   height: 55px;
   position: relative;
@@ -482,15 +488,12 @@ input.car-details:-ms-input-placeholder {
 }
 .feature-brand .hexagon,
 .feature-brand .hexagon:before,
-.feature-brand .hexagon:after, .feature-brand-mobile .hexagon,
-.feature-brand-mobile .hexagon:before,
-.feature-brand-mobile .hexagon:after {
+.feature-brand .hexagon:after {
   background: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
 }
 .feature-brand .hexagon:before,
-.feature-brand .hexagon:after, .feature-brand-mobile .hexagon:before,
-.feature-brand-mobile .hexagon:after {
+.feature-brand .hexagon:after {
   content: "";
   position: absolute;
   left: 21px;
@@ -498,13 +501,13 @@ input.car-details:-ms-input-placeholder {
   height: 57px;
   transform: rotate(145deg) skew(22.5deg);
 }
-.feature-brand .hexagon:before, .feature-brand-mobile .hexagon:before {
+.feature-brand .hexagon:before {
   top: -29px;
 }
-.feature-brand .hexagon:after, .feature-brand-mobile .hexagon:after {
+.feature-brand .hexagon:after {
   top: 27px;
 }
-.feature-brand .hexagon span, .feature-brand-mobile .hexagon span {
+.feature-brand .hexagon span {
   position: absolute;
   top: 0;
   left: 0;
@@ -513,11 +516,11 @@ input.car-details:-ms-input-placeholder {
   background: white;
   z-index: 1;
 }
-.feature-brand .hexagon-img, .feature-brand-mobile .hexagon-img {
+.feature-brand .hexagon-img {
   max-width: 70px;
   text-align: center;
 }
-.feature-brand .hexagon-container, .feature-brand-mobile .hexagon-container {
+.feature-brand .hexagon-container {
   margin: 60px 0 0;
 }
 
@@ -597,26 +600,25 @@ input.car-details:-ms-input-placeholder {
     color: #9ca7a8 !important;
   }
   .feature-brand {
-    display: none;
-  }
-  .feature-brand-mobile {
-    display: block !important;
     background-color: #009fe3;
   }
-  .feature-brand-mobile .hr-line {
+  .feature-brand .hr-line {
     display: none;
   }
-  .feature-brand-mobile .feature-heading {
+  .feature-brand .feature-heading {
     color: #fff;
     font-size: 24px !important;
     margin: 5px !important;
   }
-  .feature-brand-mobile .hexagon:before,
-.feature-brand-mobile .hexagon:after {
+  .feature-brand .hexagon:before,
+.feature-brand .hexagon:after {
     border: 3px solid #6fc1e1;
   }
-  .feature-brand-mobile .hexagon span {
+  .feature-brand .hexagon span {
     border-left: 4px solid #6fc1e1;
     border-right: 4px solid #6fc1e1;
+  }
+  iframe {
+    width: 270px !important;
   }
 }/*# sourceMappingURL=style.css.map */
